# winston_ecosystem

./: .gitignore  AGENTS.md  CONTEXT.md  README.md
ai/: README.md  channels.json
ai/mcp/: README.md  pyproject.toml
ai/mcp/mcp_winston/: audit.py  errors.py  progress.py  server.py
ai/mcp_winston/: .gitignore  Containerfile  README.md
ai/nanobot/: Containerfile  README.md
ai/personas/: cromwell-agents.md  cromwell-channels.md  cromwell-soul.md  cromwell-tools.md
ai/schedule/: README.md  cromwell-cron.json  manifest.yaml  (+2 more)
business_analysis/: 2026-07-13-pbr-return-dd-pcs-evaluation.md  2026-07-18-confirmational-entry-experiment.md  README.md
deployment/: README.md  compose.yml  eodhd-key-template.txt  eodhd.env  rebuild-dm  watchdog-env-template.txt  wv2-public-url.md
docs/: README.md
hints/: README.md
interfaces/: cromwell-notification-v1.md  winston-eod-parquet-standard.md  winston-mcp-tools.md
plans/: cromwell-ai-skills-part2.md  data-manager-initial.md  loop-engineering-and-evolution-mode.md  loop-engineering-and-evolution-mode.md.tasks.json  operational-data-backup-dr.md  operational-data-backup-dr.md.tasks.json  paper-telegram-phase3-adr006.md  portfolio-correlation-methodology-and-score.md  portfolio-overlap-rebuild.md  portfolio-overlap-rebuild.md.tasks.json  winston-mcp-immediate.md  winston-mcp-next-steps.md  winston-mcp-next-steps.md.tasks.json  winston-plus-llm.md  winston-v2-initial.md  wut-dm-parquet-source-of-truth.md
principles/: 00_majestic_monoliths_and_vision.md  01_core_principles.md  02_data_storage_and_reconciliation.md
(+394 files in other folders)
