[project]
name = "mcp-winston"
version = "0.3.0"
description = "MCP server exposing core Winston v2 (Wv2) operations for the Cromwell bot / nanobot"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
http = [
    "uvicorn>=0.30",
    "starlette>=0.37",   # if using fastmcp http/sse transport helpers
]

[project.scripts]
mcp-winston = "mcp_winston.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_winston"]